# o365-manager

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  run.py  start_all.bat  start_all.sh
.claude/: settings.local.json
app/: auth.py  config.py  database.py  main.py  models.py  schemas.py  secret_key_manager.py
app/api/: auth.py  domains.py  licenses.py  o365_users.py  reports.py  roles.py  tenants.py
app/services/: graph_service.py  msal_service.py
frontend/: README.md  index.html  package-lock.json  package.json
frontend/src/: App.tsx  main.tsx
frontend/src/components/: Layout.tsx  ProtectedRoute.tsx  TenantLicensesSummary.tsx
frontend/src/pages/: Dashboard.tsx  Domains.tsx  Licenses.tsx  Login.tsx  Register.tsx  Reports.tsx  Roles.tsx  Settings.tsx  Tenants.tsx  Users.tsx
frontend/src/store/: auth.ts  theme.ts
frontend/src/utils/: api.ts
