[project]
name = "o365-manager"
version = "1.0.0"
description = "Async multi-tenant management system for Microsoft 365 using FastAPI and MSAL"
readme = "README.md"
license = {text = "AGPL3.0"}
requires-python = "==3.12.10"

dependencies = [
    "fastapi==0.109.0",
    "uvicorn[standard]==0.27.0",
    "msal==1.26.0",
    "sqlalchemy[asyncio]==2.0.25",
    "aiosqlite==0.19.0",
    "alembic==1.13.1",
    "pydantic[email]==2.5.3",
    "pydantic-settings==2.1.0",
    "python-multipart==0.0.6",
    "aiohttp==3.9.1",
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "bcrypt==4.0.1",
    "python-dotenv==1.0.0",
    "httpx==0.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.7.0",
    "ruff>=0.0.285",
]

[tool.black]
line-length = 100
target-version = ["py310", "py311"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
